[package]
name = "rust_block"
version = "0.1.0"
authors = ["zhengjing <kei@wlblock.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "blockchainlib"
path = "src/lib.rs"

[[bin]]
name = "blockchain"
path = "src/main.rs"

[dependencies]
hex = "0.4.2"
crypto-hash = "0.3.4"
